--- a/lenin.html
+++ b/lenin.html
@@ -1,5 +1,19 @@
-– Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Ленин и дети</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+– Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.
 – Нам-то какое дело? Не видишь, пишем контрольную. – возмущённо парировал Андрюша.
 – Увидите. И ведите себя подобающе – сказала директор.
 В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.
@@ -15,3 +29,6 @@
 – Кажется я поторопился. – засмущался Рамон.
 – Бывает. Но мы это обязательно исправим. Можно и вместе. – добродушно похлопывая мальчика по голове сказал Ленин.
 Провожая Ильича, дети плакали и смеялись. Ленин обещал обязательно навестить детей на неделе ещё, но так и не навестил, так как был очень занят. Однако он и дети ещё долго переписывались благодаря почтовому пингвину из живого уголка.
+
+</body>
+</html>
