--- a/lenin.html
+++ b/lenin.html
@@ -8,14 +8,12 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
 </head>
 
 <body>
-– Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.
-– Нам-то какое дело? Не видишь, пишем контрольную. – возмущённо парировал Андрюша.
-– Увидите. И ведите себя подобающе – сказала директор.
+– Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.<br>
+– Нам-то какое дело? Не видишь, пишем контрольную. – возмущённо парировал Андрюша.<br>
+– Увидите. И ведите себя подобающе – сказала директор.<br>
 В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.
 – А вы хорошо себя вели в этом году? – спросил Владимир Ильич.
 – Конечно! – хором ответили все 9 детей.
