--- a/lenin.html
+++ b/lenin.html
@@ -14,19 +14,19 @@
 – Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.<br>
 – Нам-то какое дело? Не видишь, пишем контрольную. – возмущённо парировал Андрюша.<br>
 – Увидите. И ведите себя подобающе – сказала директор.<br>
-В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.
-– А вы хорошо себя вели в этом году? – спросил Владимир Ильич.
-– Конечно! – хором ответили все 9 детей.
-– Ну смотрите у меня! А не то напишу ещё 5 томов трудов по марксизму-ленинизму. – добродушно пошутил Ленин.
-– Нас не напугаешь, в наше время это меньшее, что нас волнует. – сказала Светлана.
-Ленин утвердительно кивнул и задумался. Точнее хотел задуматься, но дети начали закидывать его вопросами о гражданской войне и мировой революции. Владимир Ильич рассказал о военных успехах и пообещал, что грядущий год будет самым лучшим для детей в истории страны. Андрюша хотел уточнить, какой именно страны, но тут Владимир Ильич начал раздачу подарков: грецких орехов и конфет. Ленин ласково следил, чтобы каждый ребёнок получил равное количество подарков.
-– А пошли мы покажем вам наш живой уголок! – хлопая в ладоши закричала Мария.
-– Не хочу. Лучше скажите, есть ли ещё вопросы? – спросил Ленин.
-– Что случилось с Троцким? – почёсывая затылок, спросил Рамон.
-– Да ничего, а что? – удивлённо спросил Владимир Ильич.
-– Кажется я поторопился. – засмущался Рамон.
-– Бывает. Но мы это обязательно исправим. Можно и вместе. – добродушно похлопывая мальчика по голове сказал Ленин.
-Провожая Ильича, дети плакали и смеялись. Ленин обещал обязательно навестить детей на неделе ещё, но так и не навестил, так как был очень занят. Однако он и дети ещё долго переписывались благодаря почтовому пингвину из живого уголка.
-
+В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.<br>
+– А вы хорошо себя вели в этом году? – спросил Владимир Ильич.<br>
+– Конечно! – хором ответили все 9 детей.<br>
+– Ну смотрите у меня! А не то напишу ещё 5 томов трудов по марксизму-ленинизму. – добродушно пошутил Ленин.<br>
+– Нас не напугаешь, в наше время это меньшее, что нас волнует. – сказала Светлана.<br>
+Ленин утвердительно кивнул и задумался. Точнее хотел задуматься, но дети начали закидывать его вопросами о гражданской войне и мировой революции. Владимир Ильич рассказал о военных успехах и пообещал, что грядущий год будет самым лучшим для детей в истории страны. Андрюша хотел уточнить, какой именно страны, но тут Владимир Ильич начал раздачу подарков: грецких орехов и конфет. Ленин ласково следил, чтобы каждый ребёнок получил равное количество подарков.<br>
+– А пошли мы покажем вам наш живой уголок! – хлопая в ладоши закричала Мария.<br>
+– Не хочу. Лучше скажите, есть ли ещё вопросы? – спросил Ленин.<br>
+– Что случилось с Троцким? – почёсывая затылок, спросил Рамон.<br>
+– Да ничего, а что? – удивлённо спросил Владимир Ильич.<br>
+– Кажется я поторопился. – засмущался Рамон.<br>
+– Бывает. Но мы это обязательно исправим. Можно и вместе. – добродушно похлопывая мальчика по голове сказал Ленин.<br>
+Провожая Ильича, дети плакали и смеялись. Ленин обещал обязательно навестить детей на неделе ещё, но так и не навестил, так как был очень занят. Однако он и дети ещё долго переписывались благодаря почтовому пингвину из живого уголка.<br>
 </body>
+  
 </html>
