--- a/lenin.html
+++ b/lenin.html
@@ -16,9 +16,9 @@
 – Увидите. И ведите себя подобающе – сказала директор.<br>
 В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.<br>
 – А вы хорошо себя вели в этом году? – спросил Владимир Ильич.<br>
-– Конечно! – хором ответили все 9 детей.<br>
+– Конечно! – хором ответили дети.<br>
 – Ну смотрите у меня! А не то напишу ещё 5 томов трудов по марксизму-ленинизму. – добродушно пошутил Ленин.<br>
-– Нас не напугаешь, в наше время это меньшее, что нас волнует. – сказала Светлана.<br>
+– Нас таким не напугаешь, тем более в наше время. – сказала Светлана.<br>
 Ленин утвердительно кивнул и задумался. Точнее хотел задуматься, но дети начали закидывать его вопросами о гражданской войне и мировой революции. Владимир Ильич рассказал о военных успехах и пообещал, что грядущий год будет самым лучшим для детей в истории страны. Андрюша хотел уточнить, какой именно страны, но тут Владимир Ильич начал раздачу подарков: грецких орехов и конфет. Ленин ласково следил, чтобы каждый ребёнок получил равное количество подарков.<br>
 – А пошли мы покажем вам наш живой уголок! – хлопая в ладоши закричала Мария.<br>
 – Не хочу. Лучше скажите, есть ли ещё вопросы? – спросил Ленин.<br>
