--- a/lenin.html
+++ b/lenin.html
@@ -20,7 +20,7 @@
 – Ну смотрите у меня! А не то напишу ещё 5 томов трудов по марксизму-ленинизму. – добродушно пошутил Ленин.<br>
 – Нас таким не напугаешь, тем более в наше время. – сказала Светлана.<br>
 Ленин утвердительно кивнул и задумался. Точнее хотел задуматься, но дети начали закидывать его вопросами о гражданской войне и мировой революции. Владимир Ильич рассказал о военных успехах и пообещал, что грядущий год будет самым лучшим для детей в истории страны. Андрюша хотел уточнить, какой именно страны, но тут Владимир Ильич начал раздачу подарков: грецких орехов и конфет. Ленин ласково следил, чтобы каждый ребёнок получил равное количество подарков.<br>
-– А пошли мы покажем вам наш живой уголок! – хлопая в ладоши закричала Мария.<br>
+– А пошли мы покажем вам наш живой уголок! – хлопая в ладоши, закричала Мария.<br>
 – Не хочу. Лучше скажите, есть ли ещё вопросы? – спросил Ленин.<br>
 – Что случилось с Троцким? – почёсывая затылок, спросил Рамон.<br>
 – Да ничего, а что? – удивлённо спросил Владимир Ильич.<br>
