--- a/lenin.html
+++ b/lenin.html
@@ -25,7 +25,7 @@
 – Что случилось с Троцким? – почёсывая затылок, спросил Рамон.<br>
 – Да ничего, а что? – удивлённо спросил Владимир Ильич.<br>
 – Кажется я поторопился. – засмущался Рамон.<br>
-– Бывает. Но мы это обязательно исправим. Можно и вместе. – добродушно похлопывая мальчика по голове сказал Ленин.<br>
+– Бывает. Но мы это обязательно исправим. Можно и вместе. – добродушно похлопывая мальчика по голове, сказал Ленин.<br>
 Провожая Ильича, дети плакали и смеялись. Ленин обещал обязательно навестить детей на неделе ещё, но так и не навестил, так как был очень занят. Однако он и дети ещё долго переписывались благодаря почтовому пингвину из живого уголка.<br>
 </body>
   
