--- a/lenin.html
+++ b/lenin.html
@@ -1,17 +1,86 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
+  <title>Новогодний Ленин и дети</title>
 
-  <title>Ленин и дети</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <style>
+  @import url('https://fonts.googleapis.com/css?family=Muli');
 
-</head>
+  body
+    {
+      background-color: #2E2A23; /*0b0502*/
+      padding: 0px;
+      margin: 0px;
+    }
+    h1
+    {
+      font-family: 'Muli', sans-serif;
+      color: #FFCD76; /*b05228*/
+      padding: 30px 30px 30px 30px;
+    }
+    p
+    {
+      font-family: 'Muli', sans-serif;
+      color: #FFCD76; /*b05228*/
+      padding: 0 30px 0 30px;
+    }
 
-<body>
-– Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.<br>
+    nav
+    {
+        text-align: center;
+        color: #ffffff;
+    }
+    ul
+    {
+      text-align: right;
+      overflow: hidden;
+      background-color: #26231D;
+      padding: 0;
+      margin: 0;
+      border-bottom: solid 1px;
+      border-bottom-color: #403A31;
+    }
+    li
+    {
+      padding: 20px;
+      font-family: 'Muli', sans-serif;
+      font-size: 16px;
+      display:inline-block;
+      color: #FFCD76;
+    }
+    li a, li a:visited
+    {
+      display:inline;
+      text-align: right;
+      color:inherit;
+      text-decoration: none;
+    }
+    li a:hover
+    {
+
+      text-shadow: 0 0 5px rgba(255, 205, 118, 0.7);
+      /*text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);*/
+      /*text-decoration: underline;*/
+    }
+
+    .navigation{
+      
+    }
+
+  </style>
+
+  <body>
+    <ul class="navigation">
+      <li><a href="http://google.com">NAVIGATION</a></li>
+      <li><a href="http://google.com">TEST</a></li>
+      <li><a href="http://google.com">LINKS</a></li>
+      <li><a href="http://google.com">CURRICULUM</a></li>
+      <li><a href="http://google.com">PORTFOLIO</a></li>
+    </ul>
+
+    <h1>Новогодний Ленин и дети
+    </h1>
+    <p>– Дед Мороз приехал! – ворвавшись в кабинет в разгар урока, объявила директор школы.<br>
 – Нам-то какое дело? Не видишь, пишем контрольную. – возмущённо парировал Андрюша.<br>
 – Увидите. И ведите себя подобающе – сказала директор.<br>
 В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.<br>
@@ -27,6 +96,9 @@
 – Кажется я поторопился. – засмущался Рамон.<br>
 – Бывает. Но мы это обязательно исправим. Можно и вместе. – добродушно похлопывая мальчика по голове, сказал Ленин.<br>
 Провожая Ильича, дети плакали и смеялись. Ленин обещал обязательно навестить детей на неделе ещё, но так и не навестил, так как был очень занят. Однако он и дети ещё долго переписывались благодаря почтовому пингвину из живого уголка.<br>
-</body>
-  
+
+    </p>
+  </body>
+
+</head>
 </html>
