--- a/lenin.html
+++ b/lenin.html
@@ -15,13 +15,13 @@
     h1
     {
       font-family: 'Muli', sans-serif;
-      color: #DCDCDC; /*b05228*/
+      color: #C0C0C0; /*b05228*/
       padding: 30px 30px 30px 30px;
     }
     p
     {
       font-family: 'Muli', sans-serif;
-      color: #DCDCDC; /*b05228*/
+      color: #C0C0C0; /*b05228*/
       padding: 0 30px 0 30px;
     }
 
@@ -46,7 +46,7 @@
       font-family: 'Muli', sans-serif;
       font-size: 14px;
       display:inline-block;
-      color: #DCDCDC;
+      color: #C0C0C0;
     }
     li a, li a:visited
     {
