--- a/lenin.html
+++ b/lenin.html
@@ -22,6 +22,8 @@
     {
       font-family: 'Muli', sans-serif;
       color: #C0C0C0; /*b05228*/
+      font-size: 12px;
+      line-height: 1.4;
       padding: 0 30px 0 30px;
     }
 
