--- a/lenin.html
+++ b/lenin.html
@@ -80,7 +80,7 @@
 В это время кто-то попытался распахнуть дверь, но она не поддалась. Со второй попытки этот кто-то наконец одержал верх над еле держащимся на петлях пережитком царизма и вошёл в класс. Это был Дед Мороз, но не простой, а Владимир Ильич, косплеящий новогоднего деда. Дети сразу обступили его, наперебой пытаясь угадать, что дедушка принёс им в мешке к новому году.<br>
 – А вы хорошо себя вели в этом году? – спросил Владимир Ильич.<br>
 – Конечно! – хором ответили дети.<br>
-– Ну смотрите у меня! А не то напишу ещё 5 томов трудов по марксизму-ленинизму. – добродушно пошутил Ленин.<br>
+– Ну смотрите у меня! А не то напишу ещё 5 томов трудов по марксизму-ленинизму для изучения и конспектирований. – добродушно пошутил Ленин.<br>
 – Нас таким не напугаешь, тем более в наше время. – сказала Светлана.<br>
 Ленин утвердительно кивнул и задумался. Точнее хотел задуматься, но дети начали закидывать его вопросами о гражданской войне и мировой революции. Владимир Ильич рассказал о военных успехах и пообещал, что грядущий год будет самым лучшим для детей в истории страны. Андрюша хотел уточнить, какой именно страны, но тут Владимир Ильич начал раздачу подарков: грецких орехов и конфет. Ленин ласково следил, чтобы каждый ребёнок получил равное количество подарков.<br>
 – А пошли мы покажем вам наш живой уголок! – хлопая в ладоши, закричала Мария.<br>
